--- a/camara/package.json
+++ b/camara/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buscacep",
+  "name": "camara",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,8 +19,6 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
-    "flowbite": "^2.5.2",
-    "ng2-currency-mask": "^13.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -36,7 +34,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
 }
